@@ -267,3 +267,7 @@ Test omerc differences between poles (#190)
 -27 -89.9	-10033520.737	402158.063 0.000
 163 -89.9	-10055728.173	404099.799 0.000
 163 -80	-11163496.121	397796.828 0.000
+##############################################################
+Test qsc
+13 -10	2073986.9490880956873	-1680858.2722242795862 0.0000000000000
+2073986.94908809568733	-1680858.27222427958623	13.0000000000000	-10.0000000000000 0.0000000000000
